# vifania_lenovo

./: README.md  pyproject.toml  run.bat
src/: main.py
src/core/: config.py  service_factory.py
src/repositories/: camera_repository.py
src/services/: camera_service.py  connection_service.py  telegram_service.py
src/utils/: logger.py
