[tool.poetry]
name = "vifania-lenovo"
version = "0.1.0"
description = ""
authors = ["Vladislav Bodrevskiy <anpathfinder@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.11.0.86"
python-telegram-bot = "^21.10"
pydantic-settings = "^2.7.1"
aiogram = "^3.17.0"
geocoder = "^1.38.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
